--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="bg-[#F0D9E9] rounded-2xl flex flex-wrap px-12 py-6">
           <div class="flex-auto w-full md:w-1/2 flex justify-center">
             <div class="relative">
-              <img src="../images/image4.jpg" class="rounded-tl-[50%] rounded-br-[50%] z-10 relative w-full h-full" />
+              <img src="/plain/images/image4.jpg" class="rounded-tl-[50%] rounded-br-[50%] z-10 relative w-full h-full" />
               <div class="absolute left-1 top-1 bg-[#BC47A8] rounded-tl-[50%] rounded-br-[50%] z-0 w-full h-full"></div>
             </div>
           </div>
@@ -99,24 +99,24 @@
         </div>
       </div>
 
-      <form id="contactForm" class="space-y-4 mt-20">
+      <form id="contactForm" class="space-y-4 mt-20 p-6 max-w-[600px] bg-[#F0D9E9] rounded-md text-[#BC47A8] mx-auto">
         <div>
-          <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-          <input type="text" id="name" name="name" required 
-            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+          <label for="name" class="block font-medium">Name</label>
+          <input type="text" id="name" name="name" required
+            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm text-black" />
         </div>
         <div>
-          <label for="email" class="block text-sm font-medium text-gray-700">E-Mail</label>
+          <label for="email" class="block font-medium">E-Mail</label>
           <input type="email" id="email" name="email" required
-                 class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm text-black" />
         </div>
         <div>
-          <label for="message" class="block text-sm font-medium text-gray-700">Nachricht</label>
+          <label for="message" class="block font-medium">Nachricht</label>
           <textarea id="message" name="message" rows="4" required
-            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
+            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm text-black"></textarea>
         </div>
         <button type="submit" 
-          class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+          class="w-full bg-[#BC47A8] text-white py-2 px-4 rounded-md hover:bg-[#a0308d] focus:ring-2 focus:ring-[BC47A8] focus:ring-offset-2">
           Senden
         </button>
         <p id="responseMessage" class="text-sm mt-4"></p>
