--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="bg-[#F0D9E9] rounded-2xl flex flex-wrap px-12 py-6">
           <div class="flex-auto w-full md:w-1/2 flex justify-center">
             <div class="relative">
-              <img src="/plain/images/image4.jpg" class="rounded-tl-[50%] rounded-br-[50%] z-10 relative w-full h-full" />
+              <img src="/nayoki/images/image4.jpg" class="rounded-tl-[50%] rounded-br-[50%] z-10 relative w-full h-full" />
               <div class="absolute left-1 top-1 bg-[#BC47A8] rounded-tl-[50%] rounded-br-[50%] z-0 w-full h-full"></div>
             </div>
           </div>
