--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </button>
           </div>
         </div>
-        <div class="w-full md:w-1/3 mt-8">
-          <img src="/images/image2.jpg" class="max-w-full h-auto rounded-bl-[50%] rounded-tr-[50%]" />
+        <div class="w-full md:w-1/3 mt-4">
+          <img src="/nayoki/images/image2.jpg" class="max-w-full h-auto rounded-bl-[50%] rounded-tr-[50%]" />
         </div>
       </div>
 
@@ -55,7 +55,7 @@
             <div class="mt-4">
               <p class="text-sm font-light">Menopause is a natural biological process. But the physical symptoms, such as hot flashes, and emotional symptoms of menopause may disrupt your sleep, lower your energy or affect emotional health. There are many effective treatments available, from lifestyle adjustments to hormone therapy.</p>
             </div>
-            <img src="/images/image5.png" class="mt-4 rounded-lg w-full max-w-[360px]" />
+            <img src="/nayoki/images/image5.png" class="mt-4 rounded-lg w-full max-w-[360px]" />
           </div>
         </div>
       </div>
@@ -71,15 +71,15 @@
               Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
             </p>
           </div>
-          <img src="/images/image5.png" class="mt-4 rounded-lg w-full max-w-[360px] border-2 border-[#BC47A8]" />
+          <img src="/nayoki/images/image5.png" class="mt-4 rounded-lg w-full max-w-[360px] border-2 border-[#BC47A8]" />
         </div>
         <div class="w-full md:w-1/2 flex items-center justify-center">
-          <img src="/images/image6.jpg" class="rounded-bl-[50%] rounded-tr-[50%] w-full max-w-[420px]" />
+          <img src="/nayoki/images/image6.jpg" class="rounded-bl-[50%] rounded-tr-[50%] w-full max-w-[420px]" />
         </div>
       </div>
 
       <div class="relative">
-        <img src="/images/image7.jpg" class="w-full h-auto" />
+        <img src="/nayoki/images/image7.jpg" class="w-full h-auto" />
         <div class="absolute top-6 right-8 md:top-8 md:right-10 xl:top-16 xl:right-20 text-[#3D458E]">
           <div class="text-5xl md:text-7xl xl:text-[6rem] xl:leading-[6.5rem]">
             EFFECTIVE<br/> AND SAFE!
@@ -92,24 +92,24 @@
 
       <div class="-mt-12 px-6 lg:px-20 flex flex-wrap gap-4 z-10 relative justify-center">
         <div class="bg-[#3D458E] text-white w-full max-w-[520px] flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
-          <img src="/images/image8.png" class="mx-auto" />
+          <img src="/nayoki/images/image8.png" class="mx-auto" />
           <div class="text-4xl px-4 lg:px-12">
             Good Night
           </div>
           <div class="font-light px-4 lg:px-12">
             Remifin products, backed by over 35 clinical studies and more than 13,000 woman, provide clinically proven relief of menopausal symptoms such as hot flashes, night sweats, irritability and mood swings.
           </div>
-          <img src="/images/image5.png" class="rounded-xl mx-4 lg:mx-12 max-w-[360px]" />
+          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4" />
         </div>
-        <div class="bg-[#F0D9E9] text-[#BC47A8] w-full max-w-[520px] flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
-          <img src="/images/image9.png" class="mx-auto" />
-          <div class="text-4xl px-4 lg:px-12">
+        <div class="bg-[#F0D9E9] text-[#BC47A8] w-full flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
+          <img src="/nayoki/images/image9.png" class="mx-auto" />
+          <div class="text-4xl px-4">
             Good Night
           </div>
           <div class="font-light px-4 lg:px-12">
             Remifin products, backed by over 35 clinical studies and more than 13,000 woman, provide clinically proven relief of menopausal symptoms such as hot flashes, night sweats, irritability and mood swings.
           </div>
-          <img src="/images/image5.png" class="rounded-xl mx-4 lg:mx-12 max-w-[360px]" />
+          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4" />
         </div>
       </div>
 
@@ -139,7 +139,7 @@
     </main>
 
     <footer class="my-6">
-      <img src="/images/logo.jpeg" class="mx-auto" />
+      <img src="/nayoki/images/logo.jpeg" class="mx-auto" />
       <div class="container mx-auto text-center text-sm">
         <p>&copy; Schaper & Brümmer GmbH & Co. KG - Bahnhofstr. 35, 38259 Salzgitter - Alle Rechte vorbehalten</p>
       </div>
@@ -150,6 +150,6 @@
       </div>
     </footer>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/nayoki/src/main.js"></script>
   </body>
 </html>
