--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="bg-[#F0D9E9] rounded-2xl flex flex-wrap px-12 py-6">
           <div class="flex-auto w-full md:w-1/2 flex justify-center">
             <div class="relative">
-              <img src="/images/image4.jpg" class="rounded-tl-[50%] rounded-br-[50%] z-10 relative w-full h-full" />
+              <img src="/nayoki/images/image4.jpg" class="rounded-tl-[50%] rounded-br-[50%] z-10 relative w-full h-full" />
               <div class="absolute left-1 top-1 bg-[#BC47A8] rounded-tl-[50%] rounded-br-[50%] z-0 w-full h-full"></div>
             </div>
           </div>
@@ -99,7 +99,7 @@
           <div class="font-light px-4 lg:px-12">
             Remifin products, backed by over 35 clinical studies and more than 13,000 woman, provide clinically proven relief of menopausal symptoms such as hot flashes, night sweats, irritability and mood swings.
           </div>
-          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4" />
+          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4 max-w-[360px]" />
         </div>
         <div class="bg-[#F0D9E9] text-[#BC47A8] w-full flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
           <img src="/nayoki/images/image9.png" class="mx-auto" />
@@ -109,7 +109,7 @@
           <div class="font-light px-4 lg:px-12">
             Remifin products, backed by over 35 clinical studies and more than 13,000 woman, provide clinically proven relief of menopausal symptoms such as hot flashes, night sweats, irritability and mood swings.
           </div>
-          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4" />
+          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4 max-w-[360px]" />
         </div>
       </div>
 
