--- a/index.html
+++ b/index.html
@@ -90,30 +90,30 @@
         </div>
       </div>
 
-      <div class="-mt-12 px-20 flex gap-4 z-10 relative">
-        <div class="bg-[#3D458E] text-white w-full flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
+      <div class="-mt-12 px-20 flex flex-wrap gap-4 z-10 relative justify-center">
+        <div class="bg-[#3D458E] text-white w-full max-w-[520px] flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
           <img src="/images/image8.png" class="mx-auto" />
-          <div class="text-4xl px-4">
+          <div class="text-4xl px-4 lg:px-12">
             Good Night
           </div>
-          <div class="font-light px-4">
+          <div class="font-light px-4 lg:px-12">
             Remifin products, backed by over 35 clinical studies and more than 13,000 woman, provide clinically proven relief of menopausal symptoms such as hot flashes, night sweats, irritability and mood swings.
           </div>
-          <img src="/images/image5.png" class="rounded-xl mx-4" />
+          <img src="/images/image5.png" class="rounded-xl mx-4 lg:mx-12 max-w-[360px]" />
         </div>
-        <div class="bg-[#F0D9E9] text-[#BC47A8] w-full flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
+        <div class="bg-[#F0D9E9] text-[#BC47A8] w-full max-w-[520px] flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
           <img src="/images/image9.png" class="mx-auto" />
-          <div class="text-4xl px-4">
+          <div class="text-4xl px-4 lg:px-12">
             Good Night
           </div>
-          <div class="font-light px-4">
+          <div class="font-light px-4 lg:px-12">
             Remifin products, backed by over 35 clinical studies and more than 13,000 woman, provide clinically proven relief of menopausal symptoms such as hot flashes, night sweats, irritability and mood swings.
           </div>
-          <img src="/images/image5.png" class="rounded-xl mx-4" />
+          <img src="/images/image5.png" class="rounded-xl mx-4 lg:mx-12 max-w-[360px]" />
         </div>
       </div>
 
-      <form id="contactForm" class="space-y-4 mt-16 p-6 max-w-[600px] bg-[#F0D9E9] rounded-2xl text-[#BC47A8] mx-auto">
+      <form id="contactForm" class="space-y-4 mt-16 p-6 mx-6 max-w-[600px] bg-[#F0D9E9] rounded-2xl text-[#BC47A8] lg:mx-auto">
         <div class="text-3xl font-semibold text-center">Newsletteranmeldung</div>
         <div>
           <label for="name" class="block font-medium">Vorname</label>
