--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Remifemin</title>
     <link href="dist/output.css" rel="stylesheet">
     <!-- delete script and minify for performance -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
 
   <body class="bg-white">
