--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
           <div class="font-light px-4 lg:px-12">
             Remifin products, backed by over 35 clinical studies and more than 13,000 woman, provide clinically proven relief of menopausal symptoms such as hot flashes, night sweats, irritability and mood swings.
           </div>
-          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4 max-w-[360px]" />
+          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4 lg:mx-12 max-w-[360px]" />
         </div>
-        <div class="bg-[#F0D9E9] text-[#BC47A8] w-full flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
+        <div class="bg-[#F0D9E9] text-[#BC47A8] w-full max-w-[520px] flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
           <img src="/nayoki/images/image9.png" class="mx-auto" />
-          <div class="text-4xl px-4">
+          <div class="text-4xl px-4 lg:px-12">
             Good Night
           </div>
           <div class="font-light px-4 lg:px-12">
             Remifin products, backed by over 35 clinical studies and more than 13,000 woman, provide clinically proven relief of menopausal symptoms such as hot flashes, night sweats, irritability and mood swings.
           </div>
-          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4 max-w-[360px]" />
+          <img src="/nayoki/images/image5.png" class="rounded-xl mx-4 lg:mx-12 max-w-[360px]" />
         </div>
       </div>
 
