--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
       </div>
 
-      <form id="contactForm" class="space-y-4 mt-16 p-6 mx-6 max-w-[600px] bg-[#F0D9E9] rounded-2xl text-[#BC47A8] lg:mx-auto">
+      <form id="contactForm" class="space-y-4 mt-16 p-6 max-w-[600px] bg-[#F0D9E9] rounded-2xl text-[#BC47A8] mx-4 sm:mx-auto">
         <div class="text-3xl font-semibold text-center">Newsletteranmeldung</div>
         <div>
           <label for="name" class="block font-medium">Vorname</label>
