--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Remifemin</title>
-    <link href="dist/output.css" rel="stylesheet">
+    <link href="/dist/output.css" rel="stylesheet">
     <!-- delete script and minify for performance -->
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
@@ -14,8 +14,8 @@
       <div class="flex m-auto">Remifemin</div>
     </header>
 
-    <main class="mt-6 font-semibold">
-      <div class="text-[#BC47A8] flex w-full">
+    <main class="mt-6 font-semibold max-w-[2688px] mx-auto overflow-hidden">
+      <div class="text-[#BC47A8] flex w-full overflow-auto">
         <div class="flex-auto p-2 text-center cursor-pointer hover:bg-[#BC47A8] hover:text-white">Menopause</div>
         <div class="flex-auto p-2 text-center cursor-pointer hover:bg-[#BC47A8] hover:text-white">Products</div>
         <div class="flex-auto p-2 text-center cursor-pointer hover:bg-[#BC47A8] hover:text-white">Treatments</div>
@@ -74,7 +74,7 @@
           <img src="/images/image5.png" class="mt-4 rounded-lg w-full max-w-[360px] border-2 border-[#BC47A8]" />
         </div>
         <div class="w-full md:w-1/2 flex items-center justify-center">
-          <img src="/images/image6.jpg" class="rounded-bl-[50%] rounded-tr-[50%] max-w-[420px]" />
+          <img src="/images/image6.jpg" class="rounded-bl-[50%] rounded-tr-[50%] w-full max-w-[420px]" />
         </div>
       </div>
 
@@ -90,7 +90,7 @@
         </div>
       </div>
 
-      <div class="-mt-12 px-20 flex flex-wrap gap-4 z-10 relative justify-center">
+      <div class="-mt-12 px-6 lg:px-20 flex flex-wrap gap-4 z-10 relative justify-center">
         <div class="bg-[#3D458E] text-white w-full max-w-[520px] flex flex-col gap-6 md:w-1/2 rounded-2xl p-6">
           <img src="/images/image8.png" class="mx-auto" />
           <div class="text-4xl px-4 lg:px-12">
