--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Remifemin</title>
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="dist/output.css" rel="stylesheet">
     <!-- delete script and minify for performance -->
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
